--- a/demo/style.less
+++ b/demo/style.less
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+//@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 
 html, body {
     margin: 0;
