Adjustments for demo

--- a/demo/style.less
+++ b/demo/style.less
@@ -45,6 +45,11 @@ header .ribbon {
     top: -.5em;
     left: 1em;
 
+    img {
+        width: 5em;
+        margin: -1em;
+    }
+
     svg {
         height: 4em;
         margin-left: -23em;
