--- a/demo/style.less
+++ b/demo/style.less
@@ -39,15 +39,15 @@ header {
 }
 
 header .ribbon {
-    width: 5.3em;
-    padding: 2em 1em;
+    // width: 5.3em;
+    // padding: 2em 1em;
+    padding: .75em .25em .25em .25em;
     position: fixed;
     top: -.5em;
     left: 1em;
 
     img {
         width: 5em;
-        margin: -1em;
     }
 
     svg {
