Add FormControl to BUI

--- a/demo/style.less
+++ b/demo/style.less
@@ -19,6 +19,10 @@ html, body {
 	--green: #4CAF50;
 }
 
+radio-group {
+    outline: none;
+}
+
 body:not(.loaded) {
     opacity: 0;
 }
@@ -121,4 +125,5 @@ b-icon-list {
 
 body > b-panels {
     position: fixed;
+    z-index: 100;
 }
