--- a/demo/style.less
+++ b/demo/style.less
@@ -19,6 +19,8 @@ html, body {
 	--green: #4CAF50;
 }
 
+* { -webkit-tap-highlight-color: rgba(0,0,0,0); } // all elements
+
 radio-group {
     outline: none;
 }
