Improvement tweaks, docs update
- Timer: let running be set upon creation
- Spinner Overlay: adjust color for dark theme
- Tabs: stop active-changed from bubbling (no need, and causes problems)
- Menu: change class name to b-menu to mitigate conflicts
- Improving docs (particularly the docpress version)

--- a/docs/style.css
+++ b/docs/style.css
@@ -523,3 +523,29 @@ ul.heading-list .hlink {
 	color: #2196F3;
 	font-weight: bold;
 }
+
+
+.demo-block {
+  --blue: #2196F3;
+  background: #ECEFF1;
+  border-radius: 4px;
+  padding: 1.4em;
+  position: relative;
+  margin-bottom: 1em;
+  border-left: solid 4px #2196F3;
+}
+
+.demo-block:before {
+  content: 'PREVIEW';
+  display: block;
+  font-size: .8em;
+  font-weight: bold;
+  opacity: .3;
+  position: absolute;
+  right: .5em;
+  top: .15em;
+}
+
+.demo-block form-control {
+  min-width: 140px;
+}
