--- a/docs/bui.css
+++ b/docs/bui.css
@@ -414,6 +414,8 @@
   padding: .8em;
   box-sizing: border-box;
   background: rgba(0, 0, 0, 0.05);
+  height: 100%;
+  border-radius: 4px 0 0 4px;
 }
 .dialog.sideicon .d-title:empty ~ .d-msg:not(:empty) {
   padding-top: 1.5em;
