--- a/presenters/dialog/style.less
+++ b/presenters/dialog/style.less
@@ -117,7 +117,9 @@
 	.d-icon:not(:empty) {
 		padding: .8em;
 		box-sizing: border-box;
-		background: rgba(0,0,0,.05)
+		background: rgba(0,0,0,.05);
+		height: 100%;
+		border-radius: 4px 0 0 4px;
 	}
 	
 	.d-title:empty ~ .d-msg:not(:empty) {
