--- a/docs/style.css
+++ b/docs/style.css
@@ -514,8 +514,16 @@ ul.heading-list .hlink:before {
 }
 
 ul.heading-list .hlink {
-	padding-left: 40px;
-	padding-right: 4px;
+	/* padding: .25em 0 .25em 1.5em; */
+}
+
+.heading-list .heading-item {
+    padding-left: 1em;
+}
+
+li.heading-item.-depth-3 {
+  font-size: .9em;
+  opacity: .8;
 }
 
 .toc-menu .link.-active, .toc-menu .hlink.-active,
