--- a/demo/style.less
+++ b/demo/style.less
@@ -4,7 +4,7 @@ html, body {
     margin: 0;
     font-family: Roboto, HelveticaNeue, Helvetica, Calbri, sans-serif;
     background: #f5f5f5;
-    color: #222;
+    color: #2c3033;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-smoothing: antialiased;
@@ -39,10 +39,24 @@ a:hover {
 }
 
 header {
+    position: relative;
     padding: 4em 1em 7em;
     margin-bottom: -5em;
-    background: linear-gradient(-10deg,#40464b,#2c3033);
     color: #fff;
+
+    .bgd {
+        left: 0;
+        bottom: -20%;
+        position: absolute;
+        background: linear-gradient(-20deg, #1b3b52, #2c3033);
+        width: 100%;
+        height: 160%;
+        transform: skewY(4deg);
+    }
+
+    * {
+        z-index: 0;
+    }
 }
 
 header .ribbon {
@@ -52,6 +66,7 @@ header .ribbon {
     position: fixed;
     top: -.5em;
     left: 1em;
+    border-radius: 0; 
 
     img {
         width: 5em;
@@ -72,6 +87,11 @@ header .ribbon {
 
     h1 {
         font-size: 5em;
+        text-shadow: rgba(0,0,0,.6) 0 1px 3px;
+    }
+
+    h1 span {
+        font-weight: lighter;
     }
 
     p {
@@ -84,6 +104,15 @@ header .ribbon {
     header .ribbon { display: none; }
     .logo h1 {
         font-size: 3em;
+    }
+}
+
+h2[slot]{
+    margin: 0;
+    font-weight: normal;
+
+    b-icon {
+        margin: -.15em .25em 0 0;
     }
 }
 
@@ -137,10 +166,27 @@ b-tabs section {
     gap: 2em;
 }
 
+.cols-3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 2em;
+}
+
+form-handler .cols-2,
+form-handler .cols-3 {
+    gap: .5em;
+}
+
 @media (max-width:749px) {
     .cols-2 {
         grid-template-columns: 1fr;
     }
+}
+
+range-slider.bigger {
+    --size: 10px;
+    --bgd: rgba(0,0,0,.15);
+    --thumbSize: 24px;
 }
 
 form-handler {
