--- a/presenters/dialog/style.less
+++ b/presenters/dialog/style.less
@@ -118,7 +118,7 @@
 		padding: .8em;
 		box-sizing: border-box;
 		background: rgba(0,0,0,.05);
-		height: 100%;
+		// height: 100%;
 		border-radius: 4px 0 0 4px;
 	}
 	
