Add better support for native inputs
adding a helper to native inputs that provides similar functionality to text-field such as empty and invalid states

--- a/demo/style.less
+++ b/demo/style.less
@@ -17,13 +17,14 @@ html, body {
 	--red: #f44336;
 	--gray: #ccc;
 	--green: #4CAF50;
+    --formControlTheme: var(--blue);
 }
 
 * { -webkit-tap-highlight-color: rgba(0,0,0,0); } // all elements
 
-radio-group {
-    outline: none;
-}
+// radio-group {
+//     outline: none;
+// }
 
 body:not(.loaded) {
     opacity: 0;
