--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -29,8 +29,12 @@
 			border: none;
 			background: #eee !important;
 			border-radius: 30px;
+			font-size: 1rem;
+			padding-top: .25em;
+			padding-bottom: .25em;
 			padding-left: 1.8em;
 			padding-right: .5em;
+			outline: none;
 		}
 		
 		// b-spinner:not([hidden]) ~ input {
