--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -66,10 +66,19 @@
     	border-radius: 4px;
 		transition: 120ms;
 		display: flex;
-		align-items: center;
+		align-items: flex-start;
 
-		> b-icon:first-child {
-			margin: 0 .5em 0 -.15em;
+		> b-icon:first-child,
+		> .icon {
+			margin: .1em .5em 0 -.15em;
+		}
+
+		> .icon {
+			display: inline-block;
+		}
+
+		> .icon * {
+			vertical-align: text-top;
 		}
 
 		[icon-only] > b-icon:first-child {
