--- a/presenters/dialog/style.less
+++ b/presenters/dialog/style.less
@@ -79,6 +79,12 @@
 		}
 	}
 
+	.d-msg.custom-view {
+		padding: 0;
+		padding-top: .5em !important;
+		color: inherit;
+	}
+
 	.d-title:empty + .d-msg:not(:empty) {
 		padding-top: 1em;
 	}
