--- a/demo/style.less
+++ b/demo/style.less
@@ -30,8 +30,16 @@ body:not(.loaded) {
     opacity: 0;
 }
 
+blockquote {
+    // border-left: solid 4px var(--gray);
+    padding: 0 1em;
+    margin-left: 0;
+    color: #6a737d;
+    border-left: .25em solid #dfe2e5;
+}
 
-b-util-info {
+
+[key="helpers"] > * {
     padding: 2em;
     min-width: 0;
 }
