Notif: docs/demo update; minor bug fixes; some additional improvements

--- a/demo/style.less
+++ b/demo/style.less
@@ -38,6 +38,9 @@ blockquote {
     border-left: .25em solid #dfe2e5;
 }
 
+b-notifs[name="main"] {
+    position: fixed;
+}
 
 [key="helpers"] > * {
     padding: 2em;
