--- a/docs/bui.css
+++ b/docs/bui.css
@@ -1,12 +1,12 @@
 .popover {
   z-index: 10000;
   --arrow-w: 8px;
-  --bgd: #fff;
+  --bgd: var(--b-popover-bgd, #fff);
   --arrowBgd: var(--bgd);
   --border: rgba(0, 0, 0, 0.2);
 }
 .popover.dark {
-  --bgd: #2c3033;
+  --bgd: var(--b-popover-bgd, #2c3033);
   --border: #111;
   color: #fff;
 }
@@ -186,7 +186,7 @@
 .dialog .d-msg:not(:empty) {
   padding: 0.25rem 1rem 0.5rem;
   line-height: 1.2em;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--b-dialog-msg-color, rgba(0, 0, 0, 0.5));
   text-align: left;
 }
 .dialog .d-msg:not(:empty) form-control {
@@ -239,7 +239,7 @@
 .dialog.sideicon .d-icon:not(:empty) {
   padding: 0.8em;
   box-sizing: border-box;
-  background: rgba(0, 0, 0, 0.05);
+  background: var(--b-dialog-icon-bgd, rgba(0, 0, 0, 0.05));
   border-radius: 4px 0 0 4px;
 }
 .dialog.sideicon .d-title:empty ~ .d-msg:not(:empty) {
