--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -1,7 +1,7 @@
 .b-menu {
-	--hoverBgd: rgba(0,0,0,.1);
+	--hoverBgd: var(--b-menu-hover-bgd, rgba(0,0,0,.1));
 	--hoverTextColor: inherit;
-	--checkboxColor: #e10050;
+	--checkboxColor: var(--b-menu-checkbox-color, #e10050);
 	--checkboxColorHover: var(--checkboxColor);
 	// padding: .25em 0;
 	// font-size: 1.1em;
@@ -28,11 +28,12 @@
 			flex: 1;
 			box-shadow: none;
 			border: none;
-			background: #eee !important;
-			border-radius: 30px;
-			font-size: 1rem;
-			padding-top: .25em;
-			padding-bottom: .25em;
+			background: var(--b-menu-input-bgd, #eee) !important;
+			color: var(--b-menu-input-color);
+			border-radius: var(--b-menu-input-radius, 30px);
+			font-size: var(--b-menu-input-font-size, 1rem);
+			padding-top: .35em;
+			padding-bottom: .35em;
 			padding-left: 1.8em;
 			padding-right: .5em;
 			outline: none;
@@ -43,13 +44,14 @@
 		// }
 
 		input::placeholder {
-			color: rgba(0,0,0,.3);
+			color: var(--b-menu-input-placeholder-color, rgba(0,0,0,.3));
 		}
 
 		b-icon {
 			position: absolute;
-			top: .8em;
-    		left: .9em;
+			top: 50%;
+			transform: translateY(-50%);
+    		left: calc(1.1 * var(--b-menu-input-font-size, 1rem));
 		}
 
 		b-spinner {
@@ -101,7 +103,7 @@
 		.mi-description {
 			font-size: .8em;
 			line-height: 1.2em;
-			color: rgba(0,0,0,.5);
+			color: var(--b-menu-description-color, rgba(0,0,0,.5));
 		}
 		
 		[selected] {
@@ -184,7 +186,7 @@
 		font-weight: normal;
 		font-size: .9em;
 		border-top: solid 1px rgba(0,0,0,.1);
-		color: rgba(0,0,0,.5);
+		color: var(--b-menu-input-placeholder-color, rgba(0,0,0,.5));
 	}
 
 	.menu-divider:first-child {
@@ -195,8 +197,8 @@
 		padding: .5em 1em;
 		font-size: .9em;
 		line-height: 1.2em;
-		color: rgba(0,0,0,.5);
-		background: #f5f5f5;
+		color: var(--b-menu-input-placeholder-color, rgba(0,0,0,.5));
+		background: var(--hoverBgd, #f5f5f5);
 		font-style: italic;
 	}
 } // menu
