--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -51,7 +51,7 @@
 			position: absolute;
 			top: 50%;
 			transform: translateY(-50%);
-    		left: calc(1.1 * var(--b-menu-input-font-size, 1rem));
+    		left: calc(~"1.1 * var(--b-menu-input-font-size, 1rem)");
 		}
 
 		b-spinner {
