Menu: add input padding setting

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -36,8 +36,8 @@
 			color: var(--b-menu-input-color);
 			border-radius: var(--b-menu-input-radius, 30px);
 			font-size: var(--b-menu-input-font-size, 1rem);
-			padding-top: .35em;
-			padding-bottom: .35em;
+			padding-top: var(--b-menu-input-padding, .35em);
+			padding-bottom: var(--b-menu-input-padding, .35em);
 			padding-left: 1.8em;
 			padding-right: .5em;
 			outline: none;
