--- a/presenters/dialog/style.less
+++ b/presenters/dialog/style.less
@@ -1,5 +1,6 @@
 .dialog {
 	// font-size: .9em;
+	max-width: 100%;
 	min-height: 1em;
 	display: grid;
 	grid-template-areas: 
@@ -96,6 +97,7 @@
 	    // border-top: solid 1px rgba(0,0,0,.1);
 	    display: flex;
 	    justify-content: flex-end;
+		text-align: right;
 		
 		> b-btn:not(:last-child) {
 			margin-right: .5rem;
