--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -48,7 +48,7 @@
 		// }
 
 		input::placeholder {
-			color: var(--b-menu-input-placeholder-color, rgba(0,0,0,.3));
+			color: var(--b-menu-color-accent, rgba(0,0,0,.3));
 		}
 
 		b-icon {
@@ -200,8 +200,8 @@
 		padding: 1em 1em .25em 1.1em;
 		font-weight: normal;
 		font-size: .9em;
-		border-top: solid 1px rgba(0,0,0,.1);
-		color: var(--b-menu-input-placeholder-color, rgba(0,0,0,.5));
+		border-top: solid 1px var(--b-hr-bgd, rgba(0,0,0,.1));
+		color: var(--b-menu-color-accent, rgba(0,0,0,.5));
 	}
 
 	.menu-divider:first-child {
@@ -212,7 +212,7 @@
 		padding: .5em 1em;
 		font-size: .9em;
 		line-height: 1.2em;
-		color: var(--b-menu-input-placeholder-color, rgba(0,0,0,.5));
+		color: var(--b-menu-color-accent, rgba(0,0,0,.5));
 		background: var(--hoverBgd, #f5f5f5);
 		font-style: italic;
 	}
