--- a/styles/theme.less
+++ b/styles/theme.less
@@ -37,6 +37,7 @@
     --b-hr-bgd: rgba(var(--theme-rgb), .1);
 
     // BUI presenters
+    --b-panel-bgd: var(--theme-bgd);
     --fc-theme: var(--theme);
     --fc-bgd: var(--theme-bgd-accent);
     --fc-placeholder-color: var(--theme-color-accent);
@@ -57,6 +58,9 @@
 
     --b-popover-bgd: var(--theme-bgd);
     --b-popover-color: var(--theme-color);
+
+    --b-tabs-inactive-color: rgba(var(--theme-rgb), .4);
+    --b-tabs-border-color: rgba(var(--theme-rgb), .1);
 }
 
 
@@ -68,4 +72,9 @@
     --b-paper-postit-bgd-accent: var(--orange);
     --b-paper-info-bgd: var(--blue-800);
     --b-paper-info-bgd-accent: var(--blue-400);
+}
+
+b-panel {
+    color: var(--theme-color);
+    border-top: solid 1px var(--theme-bgd-accent);
 }
