--- a/styles/theme.less
+++ b/styles/theme.less
@@ -76,5 +76,9 @@
 
 b-panel {
     color: var(--theme-color);
+}
+
+.installed b-panel,
+.electron b-panel {
     border-top: solid 1px var(--theme-bgd-accent);
 }
