--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,7 +1,7 @@
 // Material Colors
 // https://material.io/design/color
 :root {
-    --color-primary: var(--blue); // DEPRECATED
+    --color-primary: var(--theme-chosen, var(--theme, var(--blue))); // DEPRECATED
     --color-secondary: var(--pink); // DEPRECATED
     --black: #000;
     --white: #fff;
