--- a/styles/theme.less
+++ b/styles/theme.less
@@ -47,6 +47,7 @@
     --b-dialog-msg-color: var(--theme-color-accent);
     --b-dialog-icon-bgd: var(--theme-bgd-accent);
     --b-paper-bgd: var(--theme-bgd);
+    --b-empty-state-color: rgba(var(--theme-rgb), .2);
     --list-search-bgd: var(--theme-bgd-accent);
     
     --b-menu-hover-bgd: var(--theme-bgd-accent2);
