Popover: fix default text color

--- a/presenters/popover/style.less
+++ b/presenters/popover/style.less
@@ -5,7 +5,7 @@
 	--bgd: var(--b-popover-bgd, #fff);
 	--arrowBgd: var(--bgd);
 	--border: rgba(0,0,0,.2);
-	color: var(--b-popover-color, #fff);
+	color: var(--b-popover-color, #333);
 	// transition: margin 200ms, opacity 200ms;
 	// opacity: 0;
 	
