Theme: adjust popover in dark mode

--- a/styles/theme.less
+++ b/styles/theme.less
@@ -83,3 +83,6 @@ b-panel {
 .electron b-panel {
     border-top: solid 1px var(--theme-bgd-accent);
 }
+
+:root[dark] .popover { --border: var(--dark-black); }
+:root[dark] .popover .__view { box-shadow: rgba(0, 0, 0, 0.4) 0 4px 8px; }
