--- a/styles/theme.less
+++ b/styles/theme.less
@@ -79,6 +79,10 @@ b-panel {
     color: var(--theme-color);
 }
 
+b-panel:not([anchor="center"]) {
+    --b-panel-shadow: 0 0 0 1px var(--theme-bgd-accent);
+}
+
 .installed b-panel,
 .electron b-panel {
     border-top: solid 1px var(--theme-bgd-accent);
