Dialog: adjust color of text-field in prompt

--- a/presenters/dialog/style.less
+++ b/presenters/dialog/style.less
@@ -58,7 +58,7 @@
 		
 		form-control {
 			text-align: left;
-			color: #222;
+			color: var(--theme-color, #222);
 			width: 100%;
 			margin-top: .5em;
 		}
