Form Control: better themeing for disable stages

--- a/styles/theme.less
+++ b/styles/theme.less
@@ -41,6 +41,7 @@
     --fc-theme: var(--theme);
     --fc-bgd: var(--theme-bgd-accent);
     --fc-placeholder-color: var(--theme-color-accent);
+    --fc-disabled-color: rgba(var(--theme-rgb), .3);
     --fc-help-color: rgba(var(--theme-rgb), .6);
     --b-notif-bgd: var(--theme-color);
     --b-notif-color: var(--theme-bgd-accent);
