new `b-grid` element

--- a/demo/style.less
+++ b/demo/style.less
@@ -299,3 +299,12 @@ body > b-panels {
     position: fixed;
     z-index: 100;
 }
+
+b-grid {
+    margin-bottom: 2em;
+}
+
+b-grid > div {
+    background: #eee;
+    padding: .5em;
+}
