Theme: change ebok product color

--- a/styles/colors-blackstone-products.less
+++ b/styles/colors-blackstone-products.less
@@ -16,7 +16,7 @@
     --color-product-PP: #009688;
     --color-product-PM: #009688;
     --color-product-MM: #009688;
-    --color-product-ET: var(--green-A400);
+    --color-product-ET: var(--brown-400);
 }
 
 // adjust some colors that dont have enough contrast
