Theme: adjust hr-bgd

--- a/styles/theme.less
+++ b/styles/theme.less
@@ -34,7 +34,7 @@
     --b-spinner-overlay-bgd: rgba(var(--theme-bgd-rgb), .6);
     --b-label-color: rgba(var(--theme-rgb), .3);
     --b-sub-color: rgba(var(--theme-rgb), .4);
-    --b-hr-bgd: rgba(var(--theme-rgb), .1);
+    --b-hr-bgd: var(--theme-bgd-accent);
 
     // BUI presenters
     --b-panel-bgd: var(--theme-bgd);
