Menu: fix hover color styles

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -152,8 +152,8 @@
 		}
 
 		@media (hover){
-		&.hover-red:hover{ background: var(--color-red); color: #fff; }
-		&.hover-orange:hover{ background: var(--color-orange); color: #fff; }
+		&.hover-red:hover{ background: var(--red-700, red); color: #fff; }
+		&.hover-orange:hover{ background: var(--orange-700, orange); color: #fff; }
 		}
 		// &[active] {
 		// 	background: red !important;
