Colors: adjust blackstone product colors

--- a/styles/colors-blackstone-products.less
+++ b/styles/colors-blackstone-products.less
@@ -11,7 +11,8 @@
     --color-product-11: #f44336;
     --color-product-12: #f44336;
     --color-product-HC: var(--deep-purple-A400);
-    --color-product-HA: #8C9EFF;
+    --color-product-HA: var(--gray-blue-300);
+    --color-product-SA: var(--gray-blue-300);
     --color-product-PB: #009688;
     --color-product-PP: #009688;
     --color-product-PM: #009688;
