--- a/demo/style.less
+++ b/demo/style.less
@@ -1,310 +1,33 @@
 //@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 
+@import '~bui/styles/index.less';
+@import '~bui/styles/colors-brand.less';
+@import '~bui/styles/colors-blackstone-products.less';
+
+
 html, body {
     margin: 0;
     font-family: Roboto, HelveticaNeue, Helvetica, Calbri, sans-serif;
-    background: #f5f5f5;
-    color: #2c3033;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-    transition: 200ms opacity;
+    // transition: 200ms opacity;
     font-size: 17px;
-
-    --blue: #2196F3;
-	--orange: #FF9800;
-	--red: #f44336;
-	--gray: #ccc;
-	--green: #4CAF50;
-    --fc-theme: var(--blue);
 }
 
-* { -webkit-tap-highlight-color: rgba(0,0,0,0); } // all elements
-
-// radio-group {
-//     outline: none;
-// }
-
-body:not(.loaded) {
-    opacity: 0;
-}
-
-blockquote {
-    // border-left: solid 4px var(--gray);
-    padding: 0 1em;
-    margin-left: 0;
-    color: #6a737d;
-    border-left: .25em solid #dfe2e5;
-}
-
-b-notifs[name="main"] {
-    position: fixed;
-}
-
-[key="helpers"] > * {
-    padding: 2em;
-    min-width: 0;
-}
-
-@media (max-width: 550px) {
-    b-util-info {
-        font-size: .8em;
-    }
-}
-
-[docs] {
-    // padding-top: 2em;
-    // margin-top: 2em;
-    // border-top: solid 1px rgba(0,0,0,.1);
-
-    h1:first-child,
-    h1:first-child + h1 {
-        display: none;
-    }
-}
-
-code {
-  background: rgba(27,31,35,0.05);
-  letter-spacing: -.05em;
-  margin: 0 .05em;
-  color: #222;
-}
-
-pre {
-    padding: 16px !important;
-    overflow: auto;
-    font-size: 85%;
-    line-height: 1.45;
-    background-color: #f6f8fa !important;
-    border-radius: 3px;
-    box-shadow: none !important;
-}
-
-pre code {
-    background: none;
-}
-
-a {
-    color: var(--blue);
-    text-decoration: none;
-}
-
-
-a:hover {
-    text-decoration: underline;
-}
-
-header {
-    position: relative;
-    padding: 4em 1em 7em;
-    margin-bottom: -5em;
-    color: #fff;
-
-    .bgd {
-        left: 0;
-        bottom: -20%;
-        position: absolute;
-        background: linear-gradient(-20deg, #1b3b52, #2c3033);
-        width: 100%;
-        height: 160%;
-        transform: skewY(4deg);
-    }
-
-    * {
-        z-index: 0;
-    }
-}
-
-header .ribbon {
-    // width: 5.3em;
-    // padding: 2em 1em;
-    padding: .75em .25em .25em .25em;
-    position: fixed;
-    top: -.5em;
-    left: 1em;
-    border-radius: 0; 
-
-    img {
-        width: 5em;
-    }
-
-    svg {
-        height: 4em;
-        margin-left: -23em;
-    }
-}
-
-.logo {
-    display: flex;
-    margin: auto auto;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-
-    h1 {
-        font-size: 5em;
-        text-shadow: rgba(0,0,0,.6) 0 1px 3px;
-    }
-
-    h1 span {
-        font-weight: lighter;
-    }
-
-    p {
-        font-size: 1.4em;
-        text-align: center;
-    }
-}
-
-@media (max-width:999px) {
-    header .ribbon { display: none; }
-    .logo h1 {
-        font-size: 3em;
-    }
-}
-
-h2[slot]{
-    margin: 0;
-    font-weight: normal;
-
-    b-icon {
-        margin: -.15em .25em 0 0;
-    }
-}
-
-[slot="menu:after"] {
-    margin: 0 .75em 0 auto;
-    display: flex;
-    align-items: center;
-}
-
-@media (max-width: 550px) {
-    h2[slot]{
-        font-size: 1em;
-    }
-
-    [slot="menu:after"] {
-        position: absolute;
-        top: -1em;
-        right: 0;
-    }
-
-    footer {
-        padding: 0 1em;
-        text-align: center;
-    }
-}
-
-main {
-    max-width: 1000px;
-    margin: 0 auto;
-}
-
-body > main > b-paper {
-    margin-bottom: 0;
-    box-shadow: rgba(0,0,0,.2) 0 3px 6px;
-    border: none;
-}
-
-h1 {
-    font-size: 3em;
-    margin: 0;
-}
-
-b-paper {
-    display: block;
-    margin-bottom: 1em;
-}
-
-main > b-paper {
-    display: block;
-    margin-bottom: 1em;
-}
-
-main > b-paper:not([compact]) {
-    --padding: 2rem;
-}
-
-b-tabs > b-tabs {
-    min-height: 500px;
-}
-
-b-tabs section {
-    position: relative;
-    min-height: 100%;
-    min-width: 0;
-    box-sizing: border-box;
-
-    > h1 {
-        margin-bottom: 1em;
-        font-size: 2.5em;
-    }
-}
-
-.cols-2 {
+body > main {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2em;
+    grid-template-rows: auto 1fr;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
 }
 
-.cols-3 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 2em;
+demo-main {
+    background: var(--theme-bgd-accent2);
+    --app-tab-bar-search-display: none;
 }
 
-form-handler .cols-2,
-form-handler .cols-3 {
-    gap: .5em;
-}
-
-@media (max-width:749px) {
-    .cols-2,
-    .cols-3 {
-        grid-template-columns: 1fr;
-    }
-}
-
-range-slider.bigger {
-    --size: 10px;
-    --bgd: rgba(0,0,0,.15);
-    --thumbSize: 24px;
-}
-
-form-handler {
-    display: grid;
-}
-
-b-paper > h1 {
-    // border-bottom: solid 2px;
-    // margin-bottom: .5em;
-    border-bottom: solid 2px;
-    margin: -2rem;
-    padding: 1rem;
-    margin-bottom: 2rem;
-    font-size: 1rem;
-    border: none;
-    border-bottom: solid 1px rgba(0,0,0,.1);
-    text-align: center;
-    text-transform: uppercase;
-}
-
-b-icon-list {
-    margin: 0 -1em;
-    padding: 0;
-}
-
-body > b-panels {
-    position: fixed;
-    z-index: 100;
-}
-
-b-grid {
-    margin-bottom: 2em;
-}
-
-b-grid > div {
-    background: #eee;
-    padding: .5em;
+b-panels[name="root"] {
+    z-index: 200;
 }
