Styles: update pwa "small screen" adjustments for landscape

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -34,7 +34,7 @@ html, body {
 }
 
 // slightly larger menu on small screens
-@media (max-width:699px) {
+@media screen and (max-width:699px), screen and (max-height:699px) {
 
     html {
         --view-gutter: 1em;
