Menu: adjust bottom padding of "text" when last child

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -207,6 +207,10 @@
 	.menu-divider:first-child {
 		border-top: none;
 	}
+
+	.menu-divider:last-child {
+		padding-bottom: 1em;
+	}
 	
 	.menu-text {
 		padding: .5em 1em;
