Menu: improvements for updating menu items and selected

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -30,6 +30,7 @@
 		input {
 			width: auto;
 			flex: 1;
+			min-width: 2em;
 			box-shadow: none;
 			border: none;
 			background: var(--b-menu-input-bgd, #eee) !important;
