Colors: adjust default deep-purple when in dark mode

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -30,4 +30,9 @@
     --gray-blue: var(--gray-blue-500);
 }
 
+// color contrast changes for dark theme
+:root[dark] {
+    --deep-purple: var(--deep-purple-300);
+}
+
 @import "./colors-material.less";
