Theme: adjust b-paper shadow in dark mode

--- a/styles/theme.less
+++ b/styles/theme.less
@@ -69,6 +69,7 @@
 // adjust colors of <b-paper> when in dark mode
 :root[dark] {
     --b-paper-overshadow: rgba(0, 0, 0, 0.35) 0px 0px 20px;
+    --b-paper-shadow: rgba(0,0,0,.35) 0 1px 5px;
     --b-paper-postit-color: var(--theme-bgd);
     --b-paper-postit-bgd: var(--amber-200);
     --b-paper-postit-bgd-accent: var(--orange);
