--- a/styles/colors.less
+++ b/styles/colors.less
@@ -7,6 +7,7 @@
     --white: #fff;
     --dark: #2c3033;
     --dark-black: #1f2224;
+    --white-bluetint: #edf2f3;
     --light: #f5f5f5;
 
     --red: var(--red-500);
